--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-*{
+* {
   margin: 0;
   padding: 0;
 }
 
-body{
+body {
   background-color: darksalmon;
 }
 
@@ -13,11 +13,9 @@ body{
 }
 
 .foto {
-  padding-left: 130px;
-  padding-right: 130px;
+  display: flex;
+  justify-content: center;
   padding-top: 20px;
-  display: block;
-  align-items: center;
 }
 
 .f1 {
@@ -25,11 +23,13 @@ body{
   border: 2px;
   border-radius: 25px;
 }
+
 .f2 {
   width: 200px;
   border: 2px;
   border-radius: 25px;
 }
+
 .f3 {
   width: 200px;
   border: 2px;
@@ -40,19 +40,24 @@ body{
   padding-top: 60px;
   font-size: 20px;
   text-align: center;
+  margin-bottom: 50px;
 }
 
 .f {
-  padding-top: 30px;
+  padding-top: 100px;
+  width: 500px;
+  height: 350px;
+  margin: auto;
+  background-color: skyblue;
   display: flex;
   justify-content: center;
-  width: 500px;
-  margin: auto;
+  border: 5px black;
+  border-radius: 10%;
 }
+
 input {
   width: 200px;
-  border: 2px;
-  
+  border: 1px;
 }
 
 .f label {
@@ -60,3 +65,61 @@ input {
   width: 100px;
 }
 
+.f .sbm {
+  margin: auto;
+  margin-top: 30px;
+  width: 100px;
+  margin-left: 140px;
+  margin-bottom: 30px;
+}
+
+.f .mf {
+  padding: 10px;
+}
+
+.f .mc {
+  padding: 10px;
+}
+
+.f .yc {
+  padding: 5px;
+}
+
+textarea {
+  border: 1px;
+}
+
+th {
+  background-color: burlywood;
+  text-align: center;
+}
+
+td {
+  text-align: center;
+  background-color: white;
+}
+
+.tbl {
+  padding-top: 50px;
+  display: flex;
+  justify-content: center;
+}
+
+table {
+  width: 90%;
+  font-size: large;
+}
+
+.list {
+  padding-top: 30px;
+  width: 700px;
+  margin: auto;
+  font-size: large;
+}
+
+.ps {
+  padding-top: 60px;
+  font-size: 20px;
+  text-align: center;
+  margin-bottom: 10px;
+}
